.fbx export crash with smoothing face #55944

Closed
opened 2018-07-12 02:55:50 +02:00 by soulfire · 5 comments

blender-2.79-d0920fb-win64

Open blender and export cube with fbx smoothing face option.
s1.JPG

Crash:

crash1.txt

**blender-2.79-d0920fb-win64** Open blender and export cube with fbx smoothing *face* option. ![s1.JPG](https://archive.blender.org/developer/F3915762/s1.JPG) Crash: [crash1.txt](https://archive.blender.org/developer/F3915770/crash1.txt)
Author

Added subscriber: @TomG

Added subscriber: @TomG
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Campbell Barton was assigned by Philipp Oeser 2018-07-12 12:00:02 +02:00
Member

Confirmed, caused by ddee0931b8

BLI_assert failed: /lichtwerk/01_projects/0000_HACK_BlenderSourceDevelopment/HACK_Produktion/11_Git/blender/source/blender/python/intern/bpy_rna.c:5052, foreach_getset(), at '!"Invalid array type - get"'
TypeError: an integer is required (got type NoneType)
Traceback (most recent call last):
  File "/lichtwerk/01_projects/0000_HACK_BlenderSourceDevelopment/HACK_Produktion/11_Git/build_279/bin/2.79/scripts/addons/io_scene_fbx/__init__.py", line 620, in execute
    return export_fbx_bin.save(self, context, **keywords)
  File "/lichtwerk/01_projects/0000_HACK_BlenderSourceDevelopment/HACK_Produktion/11_Git/build_279/bin/2.79/scripts/addons/io_scene_fbx/export_fbx_bin.py", line 3113, in save
    ret = save_single(operator, context.scene, filepath, **kwargs_mod)
  File "/lichtwerk/01_projects/0000_HACK_BlenderSourceDevelopment/HACK_Produktion/11_Git/build_279/bin/2.79/scripts/addons/io_scene_fbx/export_fbx_bin.py", line 3020, in save_single
    fbx_objects_elements(root, scene_data)
  File "/lichtwerk/01_projects/0000_HACK_BlenderSourceDevelopment/HACK_Produktion/11_Git/build_279/bin/2.79/scripts/addons/io_scene_fbx/export_fbx_bin.py", line 2819, in fbx_objects_elements
    fbx_data_mesh_elements(objects, me_obj, scene_data, done_meshes)
  File "/lichtwerk/01_projects/0000_HACK_BlenderSourceDevelopment/HACK_Produktion/11_Git/build_279/bin/2.79/scripts/addons/io_scene_fbx/export_fbx_bin.py", line 941, in fbx_data_mesh_elements
    me.polygons.foreach_get("use_smooth", t_ps)
TypeError: couldn't access the py sequence

I guess D3534 can solve this [ special case for bools was missing in bpy_rna foreach_getset() ], @ideasman42 : mind having a look?

Confirmed, caused by ddee0931b8 ``` BLI_assert failed: /lichtwerk/01_projects/0000_HACK_BlenderSourceDevelopment/HACK_Produktion/11_Git/blender/source/blender/python/intern/bpy_rna.c:5052, foreach_getset(), at '!"Invalid array type - get"' TypeError: an integer is required (got type NoneType) Traceback (most recent call last): File "/lichtwerk/01_projects/0000_HACK_BlenderSourceDevelopment/HACK_Produktion/11_Git/build_279/bin/2.79/scripts/addons/io_scene_fbx/__init__.py", line 620, in execute return export_fbx_bin.save(self, context, **keywords) File "/lichtwerk/01_projects/0000_HACK_BlenderSourceDevelopment/HACK_Produktion/11_Git/build_279/bin/2.79/scripts/addons/io_scene_fbx/export_fbx_bin.py", line 3113, in save ret = save_single(operator, context.scene, filepath, **kwargs_mod) File "/lichtwerk/01_projects/0000_HACK_BlenderSourceDevelopment/HACK_Produktion/11_Git/build_279/bin/2.79/scripts/addons/io_scene_fbx/export_fbx_bin.py", line 3020, in save_single fbx_objects_elements(root, scene_data) File "/lichtwerk/01_projects/0000_HACK_BlenderSourceDevelopment/HACK_Produktion/11_Git/build_279/bin/2.79/scripts/addons/io_scene_fbx/export_fbx_bin.py", line 2819, in fbx_objects_elements fbx_data_mesh_elements(objects, me_obj, scene_data, done_meshes) File "/lichtwerk/01_projects/0000_HACK_BlenderSourceDevelopment/HACK_Produktion/11_Git/build_279/bin/2.79/scripts/addons/io_scene_fbx/export_fbx_bin.py", line 941, in fbx_data_mesh_elements me.polygons.foreach_get("use_smooth", t_ps) TypeError: couldn't access the py sequence ``` I guess [D3534](https://archive.blender.org/developer/D3534) can solve this [ special case for bools was missing in bpy_rna foreach_getset() ], @ideasman42 : mind having a look?

This issue was referenced by 43f0af734e

This issue was referenced by 43f0af734e42d7e539cbb68ebf390b97016048bb
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55944
No description provided.